[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/ControlMainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/StartGame.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 200
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Fonts/Old-Standard-TT/OldStandard-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 200
font_data = SubResource( 10 )

[node name="MainMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MenuLandscape" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="StartGame" type="Button" parent="MenuLandscape"]
margin_left = 1371.0
margin_top = 223.0
margin_right = 1829.0
margin_bottom = 479.0
custom_fonts/font = SubResource( 2 )
text = "Start"
script = ExtResource( 3 )

[node name="OptionsMenu" type="Button" parent="MenuLandscape"]
margin_left = 1166.0
margin_top = 589.0
margin_right = 1840.0
margin_bottom = 845.0
custom_fonts/font = SubResource( 4 )
text = "Options"
script = ExtResource( 2 )

[node name="MenuPortrait" type="Control" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0

[node name="StartGame" type="Button" parent="MenuPortrait"]
margin_left = 311.0
margin_top = 917.0
margin_right = 769.0
margin_bottom = 1173.0
custom_fonts/font = SubResource( 6 )
text = "Start"
script = ExtResource( 3 )

[node name="OptionsMenu" type="Button" parent="MenuPortrait"]
margin_left = 204.0
margin_top = 1354.0
margin_right = 878.0
margin_bottom = 1610.0
custom_fonts/font = SubResource( 8 )
text = "Options"
script = ExtResource( 2 )

[connection signal="button_up" from="MenuLandscape/StartGame" to="MenuLandscape/StartGame" method="_on_StartGame_button_up"]
[connection signal="button_up" from="MenuLandscape/OptionsMenu" to="MenuLandscape/OptionsMenu" method="_on_OptionsMenu_button_up"]
[connection signal="button_up" from="MenuPortrait/StartGame" to="MenuPortrait/StartGame" method="_on_StartGame_button_up"]
[connection signal="button_up" from="MenuPortrait/OptionsMenu" to="MenuPortrait/OptionsMenu" method="_on_OptionsMenu_button_up"]
